Updated for version 1.6